# ubuntu-touch-sweetin

./: README.md  latest.json
fixes/about-page/: PageComponent.qml  README.md
fixes/apt-holds/: README.md  craftparking-apt-holds.conf
fixes/deviceinfo/: README.md  sweet.yaml
fixes/indicator-power/: README.md  device-provider-upower.c  indicator-power-service
fixes/indicator-session/: README.md  backend-dbus-actions.c  craftparking-force-restart-menuitem.conf  indicator-session-service  service.c
fixes/system-image-dbus/: README.md  api.py  apply.py  craftparking_download.py  dbus.py
fixes/system-update-panel/: CMakeLists.txt  README.md  craftparking-update.settings  plugin.cpp  plugin.h  qmldir  update.cpp  update.h
fixes/system-update-panel/qml-plugins/craftparking-update/: EntryComponent.qml  PageComponent.qml
fixes/unity8-shell/: ActionInProgressScreen.qml  Dialogs.qml  Drawer.qml  IndicatorMenuItemFactory.qml  Launcher.qml  Panel.qml  PanelMenu.qml  README.md  Shell.qml
fixes/vibrator-aw8624/: README.md  com.lomiri.hfd.AccountsService.Settings.xml  hfd-service  vibrator-aw8624.cpp  vibrator-aw8624.h
fixes/wireless-display/: README.md  enable-widi.conf
installer/: README.md  ubports.sh  update-binary
installer/single-zip/: build-single-zip.sh  mkfs.f2fs.static  update-binary
installer/two-zip/: update-binary
